--- a/test/MDK-ARM/test/test.build_log.htm
+++ b/test/MDK-ARM/test/test.build_log.htm
@@ -27,7 +27,18 @@ Project File Date:  02/14/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'test'
-"test\test.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Src/main.c(81): warning:  #1295-D: Deprecated declaration Usb_Write_float - give arg types
+  bool Usb_Write_float();
+../Src/main.c(186): warning:  #188-D: enumerated type mixed with another type
+  						HAL_GPIO_WritePin(GPIOG,GPIO_PIN_13, 1);
+../Src/main.c(193): warning:  #188-D: enumerated type mixed with another type
+  					HAL_GPIO_WritePin(GPIOG,GPIO_PIN_13, 0);
+../Src/main.c: 3 warnings, 0 errors
+linking...
+Program Size: Code=25452 RO-data=656 RW-data=144 ZI-data=122280  
+FromELF: creating hex file...
+"test\test.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
